<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeWrite</string>
    <string name="action_settings">Settings</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="create_session">Create Session</string>
    <string name="leave_session">Leave Session</string>
	<string name="join_session">Join Session</string>
	<string name="broadcast">Broadcast</string>
    
</resources>
